<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Photo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">Photo Title</string>
    <string name="description">Description</string>
    <string name="flickrPhoto"></string>
    <string name="ownername">Name</string>
    <string name="contact">Bob Marley</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawerTitle">Drawer</string>
    <string name="searchBar">Search</string>
    <string name="search_hint">Search for Photos</string>
    <string name="date">Date</string>
    <string name="addressBook">Addressbook</string>
    <string name="dialog_message">Bummer no photos found</string>

</resources>
